fix #806 Add some missing z-index on the splitter handles

--- a/src/aria/widgets/container/SplitterStyle.tpl.css
+++ b/src/aria/widgets/container/SplitterStyle.tpl.css
@@ -29,6 +29,7 @@
   height:${skinClass.separatorHeight}px;
   cursor: n-resize;
   display:block;
+  z-index: 5;
   {call background(skinClass.handleBackgroundColor,skinClass.handleSpriteURLh,"no-repeat center top")/}
 }
 
@@ -37,12 +38,14 @@
   width:${skinClass.separatorHeight}px;
   cursor: e-resize;
   display:block;
+  z-index: 5;
   {call background(skinClass.handleBackgroundColor,skinClass.handleSpriteURLv,"no-repeat right center")/}
 }
 
 .xSplitter_${skinClassName}_sContainer{
   position:relative;
   display:inline-block;
+  z-index: 1;
 }
 
 .xSplitter_${skinClassName}_sConstrained{
@@ -80,6 +83,7 @@
   position:absolute;
   overflow: auto;
   display:block;
+  z-index: 1;
 }
 
     {/macro}
